--- a/__python/flask/counter/templates/counter.html
+++ b/__python/flask/counter/templates/counter.html
@@ -1,3 +1,4 @@
+<!-- #done with moath -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +17,13 @@
 </form>  
 
 <form method="get" action="/add_two">
+    <button type="submit" >add by two</button>
+
+</form>
+
+<form action="/sep" method="POST" >
+    <label for="number">add the number</label>
+    <input type="text" name="number">
     <button type="submit" >add</button>
 
 </form>
