--- a/django/django_intro/time_count/dojo_survey/templates/show.html
+++ b/django/django_intro/time_count/dojo_survey/templates/show.html
@@ -3,7 +3,7 @@
 <p>name : {{name}}</p>
 <p>language : {{lang}}</p>
 <p>location : {{location}}</p>
-<p>comment : {{text}}</p>
+<p>comment : {{comment}}</p>
 </div>
 
 <style>
