--- a/django/django_intro/ninja_gold/ninja_app/static/css/style.css
+++ b/django/django_intro/ninja_gold/ninja_app/static/css/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
 }
@@ -18,8 +18,10 @@ main{
     margin-left: 15px;
     width: 100px;
 }
-
-.gold{
+button{
+    background-color: gold;
+}
+/* .gold{
     border: 2px solid black;
     background-color: gold;
     padding: 5px 20px;
@@ -27,9 +29,9 @@ main{
     margin-bottom: 30px;
     font-size: larger;
     font-weight: bold;
-}
+} */
 
-section{
+/* section{
     display: flex;
     justify-content: space-between;
 }
@@ -79,4 +81,4 @@ flex: 1;
     font-weight: bold;
     float: right;
     margin-top: 100px;
-}
+} */ */
