--- a/django/django_intro/ninja_gold/ninja_app/templates/show.html
+++ b/django/django_intro/ninja_gold/ninja_app/templates/show.html
@@ -5,14 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">    
+    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}">     -->
     <title>Document</title>
 </head>
+<style>
+*{
+    background-color: goldenrod;
+}
+.forms{
+    display: flex;
+    justify-content: space-evenly;
+}
+.log{
+    position: relative;
+    left: 355px;
+}
+</style>
 <body>
     <main>
         <div class="top">
             <label for="gold">Your Gold</label>
             <input value={{request.session.gold}} readonly>
+            <div class="clear">
+                <form method="post" action="/clear">
+                    {% csrf_token %}
+                    <input type="hidden" name="clear">
+                    <button type="submit">Clear</button>
+                </form>
+                </div>
         </div>
         <div class="forms">
             <form method="post" action="/process_money">
@@ -46,7 +66,7 @@
         </div>
         <div class="log">
             <label>Activities:</label>
-            <div contenteditable="false" style="width: 850px;max-height:200px;
+            <div contenteditable="false" style ="width: 850px;max-height:200px;
             overflow-y:scroll; border:solid black 1px;">
                 {%for i in request.session.log%}
                 {%if i.0  == 'o'%}
@@ -57,13 +77,7 @@
                 {%endfor%}
             </div>
         </div>
-        <div class="clear">
-        <form method="post" action="/clear">
-            {% csrf_token %}
-            <input type="hidden" name="clear">
-            <button type="submit">Clear</button>
-        </form>
-        </div>
+        
 
     </main>
 </body>
